# qtils

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/qtils/: append.hpp  assert.hpp  bytes.hpp  macro.hpp  optional_ref.hpp  outcome.hpp  unwrap.hpp
include/qtils/cxx/: forward_like.hpp  print.hpp
src/qtils/: append.hpp  assert.hpp  bitspan.hpp  blob.hpp  buffer.hpp  buffer_or_view.hpp  buffer_view.hpp  byte_arr.hpp  byte_utils.hpp  byte_vec.hpp  byte_vec_or_view.hpp  byte_view.hpp  bytecmp.hpp  bytes.hpp  bytes_TODO.hpp  bytes_std_hash.hpp  bytestr.hpp  create_smart_pointer_macros.hpp  empty.hpp  enable_create_smart_pointer.hpp  enum_error_code.hpp  error.hpp  error_throw.hpp  final_action.hpp  fixed_byte_vec.hpp  fixed_byte_vector.hpp  hex.hpp  literals.hpp  macro.hpp  move.hpp  option_take.hpp  optional_ref.hpp  optref.hpp  outcome.hpp  read_file.hpp  shared_ref.hpp  size_limited_containers.hpp  span_adl.hpp  strict_sptr.hpp  tagged.hpp  (+5 more)
src/qtils/cxx20/: lexicographical_compare_three_way.hpp
src/qtils/cxx23/: forward_like.hpp  print.hpp
src/qtils/cxx23/ranges/: contains.hpp
src/qtils/macro/: common.hpp  unwrap.hpp
src/qtils/test/: outcome.hpp
test/: CMakeLists.txt  blob_test.cpp  buffer_test.cpp  buffer_view_test.cpp  byte_arr_test.cpp  byte_vec_or_view.cpp  byte_vec_test.cpp  byte_view_test.cpp  hex_test.cpp  qtils_compiles.cpp  shared_ref_test.cpp  size_limited_containers_test.cpp  strict_sptr_test.cpp  visit_in_place_test.cpp
